<resources>
    <string name="app_name">Zalo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="menu_item_messages">Messages</string>
    <string name="menu_item_contacts">Contacts</string>
    <string name="menu_item_discovery">Discovery</string>
    <string name="menu_item_timeline">Timeline</string>
    <string name="menu_item_me">Me</string>
    <string name="menu_item_qrcode">QR Code</string>
    <string name="menu_item_more">More</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_add_friend">Add friend</string>
    <string name="menu_item_create_group">Create group</string>
    <string name="menu_item_my_cloud">My Cloud</string>
    <string name="menu_item_zalo_calendar">Zalo Calendar</string>
    <string name="menu_item_create_group_call">Create group call</string>
    <string name="menu_item_loggedin_devices">Logged-in devices</string>
    <string name="fragment_chat_rooms_focused_tab_item">Focused</string>
    <string name="fragment_chat_rooms_other_tab_item">Other</string>
    <string name="filter">Filter</string>
    <string name="filter_chat_room_unread">Unread</string>
    <string name="filter_chat_room_mentions_me">Mentions me</string>
    <string name="filter_chat_room_labels">Labels</string>
    <string name="people_you_may_know">People you may know</string>
    <string name="see_more">See more</string>
    <string name="easily_find_and_message_your_friends">Easily find and message your friends</string>
    <string name="find_friends">Find friends</string>
    <string name="keep_unimportant_conversations">Keep unimportant conversations here to stay organized and avoid distractions</string>
    <string name="add_conversations">Add conversations</string>
    <string name="suggestions">Suggestions</string>
    <string name="add">Add</string>
    <string name="friends">Friends</string>
    <string name="oa">OA</string>
    <string name="groups">Groups</string>
    <string name="friend_request">Friend request</string>
    <string name="phonebook">Phonebook</string>
    <string name="contacts_who_use_zalo">Contacts who use Zalo</string>
    <string name="birthday_calendar">Birthday calendar</string>
    <string name="follow_birthdays">Follow your friends\' birthdays</string>
    <string name="all">All  %1$d</string>
    <string name="recently_online">Recently online  %1$d</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="online_status">Online status</string>
    <string name="find_more_oa">Find more Official Accounts</string>
    <string name="baomoi">Bao Moi</string>
    <string name="thoitiet">Thoi Tiet</string>
    <string name="zingmp3">Zing MP3</string>
    <string name="create_new_group">Create new group</string>
    <string name="joined_groups">Joined groups (%1$d)</string>
    <string name="menu_item_upload_post">Upload post</string>
    <string name="menu_item_notification">Notification</string>
    <string name="interested">Interested</string>
    <string name="other">Other</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="album">Album</string>
    <string name="memory">Memory</string>
    <string name="story">Story</string>
    <string name="create_new_story">Create new</string>
    <string name="like">Like</string>
    <string name="manange_other">Manage Other</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="message">Message</string>
    <string name="tab_for_more_info">Tab for more info</string>
    <string name="last_seen">Last seen %1$s</string>
    <string name="zalo_video">Zalo Video</string>
    <string name="game_center">Game Center</string>
    <string name="lifestyle_services">Lifestyle Services</string>
    <string name="financial_utilities">Financial Utilities</string>
    <string name="mini_app">Mini App</string>
    <string name="e_government">e-Government</string>
    <string name="discovery_content_1">Hot News!</string>
    <string name="discovery_content_2">Join ZFish to Hunt the Golden Ring Boss!</string>
    <string name="discovery_content_3">Mobile Top Up, Lottery Result, Football,...</string>
    <string name="english">English</string>
    <string name="signin">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="zalo">Zalo</string>
    <string name="signin_title">Login</string>
    <string name="please_enter_phone_number_and_password_to_signin_in">Please enter phone number and password to log in</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="recover_password">Recover password</string>
    <string name="faq">FAQ</string>
    <string name="show">SHOW</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_of_service">Zalo Terms of Service</string>
    <string name="social_terms_of_service">Zalo\'s Social Terms of Service</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="otp_reminder">Enter the 6-digit sequence sent to the phone number</string>
    <string name="otp_help">I still need help with verification codes</string>
    <string name="enter_your_name">Enter Zalo name</string>
    <string name="signup_enter_name_reminder">Use your real name so people can recognize you</string>
    <string name="john_doe">John Doe</string>
    <string name="zalo_name_rule1">• Between 2 and 40 characters</string>
    <string name="zalo_name_rule2">• No numbers allowed</string>
    <string name="zalo_name_rule3">• Must comply</string>
    <string name="zalo_naming_rules">Zalo naming rules</string>
    <string name="add_personal_info">Add personal information</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="choose_gender">Choose gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="select_birthday">Select date of birth</string>
    <string name="choose_birthday">Choose</string>
    <string name="birthday_limit">You must be 14 years old to use Zalo</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="update_avatar">Update profile picture</string>
    <string name="avatar_reminder">Set a new profile picture so people can recognize you easily</string>
    <string name="confrim">Confirm</string>
    <string name="skip_avatar_confirm_description">Some features may be affected. Still skipping this step?</string>
    <string name="add_image">Add image</string>
    <string name="signout">Sign Out</string>
    <string name="send_free_message_to_friend">Send free messages to friends</string>
    <string name="add_friend_from_contact">Add friend from contacts</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone number</string>
    <string name="add_friend">Add friend</string>
    <string name="friend_request_has_been_sent">Friend request has been sent</string>
    <string name="settings">Settings</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="no_friend_requests_sent">No friend requests sent</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="recall">Recall</string>
    <string name="no_friend_requests_received">No friend requests received</string>
    <string name="camera">Camera</string>
    <string name="mic">Mic</string>
    <string name="end">End</string>
    <string name="more">More</string>
    <string name="speaker">Speaker</string>
    <string name="answer">Answer</string>
    <string name="incoming_audio_call">Zalo: Incoming audio call</string>
    <string name="incoming_video_call">Zalo: Incoming video call</string>
    <string name="fragment_me_description1">Xem trang cá nhân</string>
    <string name="fragment_me_description2">Hình nền và nhạc cho cuộc gọi Zalo</string>
    <string name="fragment_me_description3">Lưu trữ và xuất trình các mã QR quan trọng</string>
    <string name="fragment_me_description4">Không gian lưu trữ dữ liệu trên đám mây</string>
    <string name="fragment_me_description5">Lưu trữ các tin nhắn quan trọng</string>
    <string name="fragment_me_description6">Quản lý dữ liệu Zalo của bạn</string>
    <string name="fragment_me_title2">zStyle - Nổi bật trên Zalo</string>
    <string name="fragment_me_title3">Ví QR</string>
    <string name="fragment_me_title4">zCloud</string>
    <string name="fragment_me_title5">Cloud của tôi</string>
    <string name="fragment_me_title6">Dữ liệu trên máy</string>
    <string name="fragment_me_title7">Tài khoản và bảo mật</string>
    <string name="fragment_me_title8">Quyền riêng tư</string>
    <string name="choose_avatar_source">Choose avatar</string>
    <string name="gallery">Gallery</string>
    <string name="add_password">Add Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
</resources>