<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messages_selector"
        android:title="@string/menu_item_messages" />
    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/contacts_selector"
        android:title="@string/menu_item_contacts" />
    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/discovery_selector"
        android:title="@string/menu_item_discovery" />
    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/timeline_selector"
        android:title="@string/menu_item_timeline" />
    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/me_selector"
        android:title="@string/menu_item_me" />
</menu>
