<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurfaceBright"
    android:paddingBottom="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_signup_enter_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/enter_your_name"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_signup_enter_name_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/signup_enter_name_reminder"
        android:textColor="@color/colorOnTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_signup_enter_name_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_signup_enter_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:cursorColor="@color/colorPrimary"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_signup_enter_name_reminder"
        app:shapeAppearanceOverlay="@style/Theme.Zalo.CurvedImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_signup_enter_name_text_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/john_doe"
            android:inputType="text"
            android:paddingVertical="16dp"
            android:textColor="@color/colorOnSurfaceVariant"
            android:textColorHighlight="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_signup_enter_name_text_input_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zalo_name_rule1"
                android:textColor="@color/colorOutline" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zalo_name_rule2"
                android:textColor="@color/colorOutline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zalo_name_rule3"
                    android:textColor="@color/colorOutline" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/zalo_naming_rules"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_signup_enter_name_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:paddingVertical="12dp"
            android:text="@string/next"
            android:textColor="@color/enabled_state_surface_color"
            android:textSize="15sp"
            app:backgroundTint="@color/enabled_state_primary_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
