<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurfaceBright"
    android:paddingTop="8dp"
    android:paddingBottom="10dp"
    tools:context=".ui.fragments.AuthFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_auth_change_language_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="14dp"
        android:paddingHorizontal="16dp"
        android:text="@string/english"
        android:textColor="@color/colorOnSurfaceVariant"
        app:drawableEndCompat="@drawable/ic_arrow_down_light"
        app:drawableTint="@color/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/zalo"
        android:textColor="@color/colorPrimary"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_change_language_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_auth_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="4dp"
        android:paddingVertical="14dp"
        android:text="@string/signin"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_auth_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/colorSurfaceContainerLow"
        android:paddingVertical="14dp"
        android:text="@string/create_new_account"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>